# MAJOR-PROJECT-2026-2027

./: .gitignore  LICENSE.md  README.md  makefile
server/: .example.env  future.md  pyproject.toml  seed.py
server/app/: app.py
server/app/core/: base_repository.py  config.py  database.py  models.py  repository.py  security.py
server/app/features/hospitals/: models.py  repository.py  router.py  schema.py  service.py
server/app/features/users/: auth_router.py  dependencies.py  models.py  permissions.py  repository.py  router.py  schema.py  service.py
server/migrations/: env.py
server/migrations/versions/: b418ab51599a_initial_migration.py
